<resources>
    <string name="app_name">Carry Us</string>

    <!-- common -->
    <string name="common_extra_small_title">20인치 미만</string>
    <string name="common_small_title">20인치</string>
    <string name="common_large_title">24인치</string>
    <string name="common_extra_large_title">28인치 이상</string>
    <string name="common_zero">0</string>

    <!-- util -->
    <string name="finish_app_toast_msg">뒤로가기를 한 번 더 누르면 종료됩니다</string>
    <string name="refresh_error">자동로그인이 만료되었습니다. 다시 로그인해주시기 바랍니다.</string>

    <!-- bottom navigation -->
    <string name="bottom_navigation_menu_search">검색</string>
    <string name="bottom_navigation_menu_list">예약기록</string>
    <string name="bottom_navigation_menu_my">마이페이지</string>

    <!-- reservation list -->
    <string name="reservation_list_toolbar_title">예약 기록</string>
    <string name="reservation_list_empty_text">요청한 예약이 없어요!</string>

    <!-- reservation detail -->
    <string name="reservation_detail_toolbar_title">예약 상세</string>

    <!-- cancel bottom sheet -->
    <string name="cancel_bottomsheet_title">취소 사유 입력</string>
    <string name="cancel_bottomsheet_et_hint">예약을 취소하시려는 이유가 무엇인가요?</string>
    <string name="cancel_bottomsheet_btn">예약 취소 요청하기</string>

    <!-- search -->
    <string name="search_review_score_count">%s (%s)</string>
    <string name="search_search_hint">어디로 여행가시나요?</string>
    <string name="search_reload">이 위치로 검색 할게요.</string>
    <string name="search_location_permission_request">앱 실행을 위해서는 권한을 설정해야 합니다.</string>
    <string name="search_location_permission_granted">앱 실행을 위한 권한이 설정 되었습니다</string>
    <string name="search_location_permission_denied">앱 실행을 위한 권한이 취소 되었습니다</string>

    <!-- search result-->
    <string name="search_result_search_hint">여행지 검색</string>
    <string name="search_result_empty_title">검색어에 해당되는 지역이 없어요!</string>

    <!-- search list-->
    <string name="search_list_empty_title">지역에 해당되는 가게가 없어요!</string>
    <string name="search_list_title">가게 리스트</string>

    <!-- my page -->
    <string name="mypage_my_review">나의 후기</string>
    <string name="mypage_user_security">개인정보 처리방침</string>
    <string name="mypage_user_terms">서비스 이용약관</string>
    <string name="mypage_feedback">피드백</string>
    <string name="mypage_logout">로그아웃</string>
    <string name="mypage_unsubscribe">회원탈퇴</string>

    <!-- my review -->
    <string name="my_review_inquiry_toolbar_title">후기 조회</string>
    <string name="my_review_inquiry_chose_star">내가 선택한 별점</string>
    <string name="my_review_inquiry_edit_review">수정하기</string>

    <!-- my review edit -->
    <string name="my_review_edit_toolbar_title">후기 수정</string>
    <string name="my_review_edit_star_hint">가게의 별점을 선택해주세요</string>

    <!-- my review write -->
    <string name="my_review_write_toolbar_title">후기 작성</string>
    <string name="my_review_write_star_hint">가게의 별점을 선택해주세요</string>
    <string name="my_review_write_content_hint">추가로 좋았던 점이 있다면 말씀해 주세요!</string>

    <!-- store detail -->
    <string name="store_detail_fee_title">요금</string>
    <string name="store_detail_request_btn_title">요청서 작성하기</string>
    <string name="store_detail_suitcase_unit">%d개</string>
    <string name="store_detail_fee_unit">%d원/시간</string>

    <!-- reservation request -->
    <string name="reservation_request_title">요청서 작성</string>
    <string name="reservation_request_send">전송</string>
    <string name="reservation_request_empty_date_alert">날짜를 먼저 선택해 주세요.</string>
    <string name="reservation_request_reservation_person_title">예약자 정보</string>
    <string name="reservation_request_payment_title">결제 정보</string>
    <string name="reservation_request_reservation_person_name_count">%d/6</string>
    <string name="reservation_request_reservation_phone_number_count">%d/11</string>
    <string name="reservation_request_reservation_others_count">%d/100</string>
    <string name="reservation_request_reservation_others_hint">요청 사항을 입력해 주세요</string>
    <string name="reservation_request_reservation_others_title">기타 요청 사항</string>
    <string name="reservation_request_reservation_phone_number_hint">전화번호를 입력해 주세요</string>
    <string name="reservation_request_reservation_phone_number_title">전화번호</string>
    <string name="reservation_request_reservation_person_name_hint">이름을 입력해 주세요</string>
    <string name="reservation_request_reservation_person_name_title">이름</string>
    <string name="reservation_request_reservation_fee">예약 금액</string>
    <string name="reservation_request_item_time">%s:%s</string>
    <string name="get_reservation_info_success">조회에 성공했습니다.</string>

    <!-- reservation detail -->
    <string name="reservation_detail_go_to_store">가게 상세정보 보러가기</string>
    <string name="reservation_detail_reservation_info">예약 정보</string>
    <string name="reservation_detail_date">날짜</string>
    <string name="reservation_detail_carrier_info">캐리어 정보</string>
    <string name="reservation_detail_reservation_client_info">예약자 정보</string>
    <string name="reservation_detail_reservation_client_name">이름</string>
    <string name="reservation_detail_reservation_client_phone_number">전화번호</string>
    <string name="reservation_detail_reservation_client_others">기타 요청 사항</string>
    <string name="reservation_detail_reservation_payment_info">결제 정보</string>
    <string name="reservation_detail_reservation_payment_fee">결제 금액</string>
</resources>
