<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.sookmyung.carryus.ui.mypage.MyPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white000">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="68dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.063"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp">
                <TextView
                    style="@style/head4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bottom_navigation_menu_my"
                    android:textColor="@color/black000"
                    android:layout_marginTop="29dp"
                    android:layout_gravity="center"/>
            </androidx.appcompat.widget.Toolbar>
        <View
            android:id="@+id/view8"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/gray100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view8">
            <ImageView
                android:id="@+id/iv_mypage_profile_img"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@color/black000"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_mypage_member_name"
            style="@style/body1_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="닉네임"
            android:textColor="@color/gray700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <View
            android:id="@+id/view9"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mypage_member_name" />

        <TextView
            android:id="@+id/tv_mypage_review_title"
            style="@style/body1_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:text="@string/mypage_my_review"
            android:textColor="@color/gray700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view9" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mypage_review"
            android:layout_width="0dp"
            android:layout_height="97dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mypage_review_title" />

        <View
            android:id="@+id/view10"
            android:layout_width="wrap_content"
            android:layout_height="4dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_mypage_review" />

        <TextView
            android:id="@+id/tv_mypage_logout"
            style="@style/body2_medi"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/mypage_logout"
            android:textColor="@color/gray700"
            android:paddingStart="18dp"
            android:gravity="center_vertical|start"
            android:onClick="@{() -> viewModel.onButtonClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view10" />

        <TextView
            android:id="@+id/tv_mypage_unsubscribe"
            style="@style/detail2_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mypage_unsubscribe"
            android:textColor="@color/gray200"
            app:layout_constraintBottom_toBottomOf="@+id/iv_mypage_unsubscribe"
            app:layout_constraintEnd_toStartOf="@+id/iv_mypage_unsubscribe"
            app:layout_constraintTop_toTopOf="@+id/iv_mypage_unsubscribe" />

        <ImageView
            android:id="@+id/iv_mypage_unsubscribe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_unsubscribe" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
